# cdep-android-studio-tensorflow-sample

./: .gitignore  cdep.sha256  cdep.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
